<resources>
    <string name="app_name">Countries</string>
    <string name="country_search">Search Country</string>
    <string name="country_capital">Capital:</string>
    <string name="country_calling_code">Calling code:</string>
    <string name="country_region">Region:</string>
    <string name="country_subregion">Sub region:</string>
    <string name="country_timezone">Timezone:</string>
    <string name="country_currencies">Currencies:</string>
    <string name="country_languages">Languages:</string>
    <string name="country_offline_search">Offline search</string>
    <string name="country_online_search">Online search</string>
</resources>
